--- a/Traders Mobile/app/src/main/res/values/strings.xml
+++ b/Traders Mobile/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="title_activity_login">Sign in</string>
     <string name="category_text">Choose a Category</string>
     <string name="back_button">Back</string>
+    <string name="phone">Phone:</string>
+    <string name="name">Name:</string>
+    <string name="email">Email:</string>
 </resources>
